# CurvatureEngine

./: CMakeLists.txt  Constraint.py  CurvatureEngine  K_slice.csv  Makefile  README.md  T_energy_momentum.csv  christoffel_slice.csv  compile_commands.json  constraints_evolution.csv  fluid_slice.csv  gamma_slice_full.csv  gauge_slice.csv
.cache/clangd/index/: 3DRicciTensor.cpp.82C801FDA3EF408D.idx  4DRicciTensor.cpp.01C8A30194810FBE.idx  4DRiemannTensor.cpp.85ADA180A167EC91.idx  ADMproblems.cpp.4E55B3BAB944F171.idx  CFL_Condition.cpp.FA71A5D8D031FC2C.idx  Christoffel3D.cpp.2A371D572C64D050.idx  Christoffel4D.cpp.78A5160F6BD7279C.idx  Connexion.h.79184EB6FBE2456C.idx  ConnexionADM.cpp.4BBD3C1D1828BD38.idx  DerivativeADM.cpp.8BE6E4800DC6B32D.idx  Derivatives.h.A731E00E04F62E29.idx  Fluid.cpp.770F3DC6BB630295.idx  GaugeADM.cpp.88F44DB5B022D012.idx  Geodesics.cpp.281A13697E91F3A0.idx  Geodesics.cpp.E4DC029CF7EBD35E.idx  Geodesics.h.E37DAB830DAA9C8C.idx  Grid.h.4EC1EC451A915397.idx  GridTensor.h.7E5F7EF8CC9FA051.idx  Kerr.cpp.133FD7C8C6A4FAF9.idx  KerrNewman.cpp.37905ABE28AA018C.idx  KerrdS.cpp.4140D4AA47461EB2.idx  LightGeodesics.cpp.101BEAF33A874EA9.idx  Log.h.94DA95CEDA18BEF5.idx  Metric.h.E6AC14850C051FAF.idx  MetricCompute.cpp.5BB6AA7A4C8405CA.idx  MetricUtils.cpp.F51B19DB2E0C7213.idx  Parser.cpp.46193ECC1822B038.idx  PlotADM.cpp.661E88D90D235AA5.idx  RK_Utils.cpp.58BA34DA53851FCC.idx  Riemann.cpp.A832BB890C8E9076.idx  RungeKuttaADM.cpp.D1671ECE70A4E7A9.idx  SolverADM.cpp.228AAE7B5517D07D.idx  Symetries_check.cpp.746DC45C9C46B983.idx  Tensor.h.ACD4A65DCD580493.idx  TensorADM.cpp.DC8A25DE8DB111BF.idx  Utils.cpp.59DDE31A91DC8E2D.idx  initADM.cpp.EFD5157AC4D8DB07.idx  matrix.cpp.E6CC2CBBFAD234DC.idx  matrix.h.4E307D30838B771C.idx
Output/: K_slice.csv  T_energy_momentum.csv  alpha_slice.csv  christoffel_slice.csv  fluid_slice.csv  gamma_slice_full.csv  gauge_slice.csv
includes/: Cell3D.h  Connexion.h  Derivatives.h  Fluid.h  Geodesics.h  Grid.h  GridTensor.h  Log.h  Metric.h  MetricAVX.h  Plot.h  SimdConfig.h  Tensor.h  matrix.h
includes/app/: CommandLine.h  Problems.h  RuntimeState.h
includes/bssn/: GridBoundary.h  GridConfig.h  GridData.h  GridOutput.h
includes/core/: Constants.h  GeodesicIntegrator.h  Types.h
scripts/: Constraints.py  Evaluate.py  Fluid_vtk.py  Gamma_tilde.py  Gamma_tilde_anim.py  Geodesic.py  T_uv.py  chi_evolve.py  fluid.py  gauge.py  gauge2.py  horizon.py  k_to_vtk.py  plot_orbit.py  shadow_plot_2d.py  wave.py
srcs/: main.cpp
srcs/ADM/: CFL_Condition.cpp  ConnexionADM.cpp  DerivativeADM.cpp  ExtrinsicADM.cpp  GaugeADM.cpp  MomentumADM.cpp  PlotADM.cpp  RungeKuttaADM.cpp  SolverADM.cpp  TensorADM.cpp  initADM.cpp
srcs/ADM/Analysis/: PlotADM.cpp
srcs/ADM/Constraints/: HamiltonianADM.cpp  MomentumADM.cpp
srcs/ADM/Derivatives/: FiniteDifference.cpp  Metric_Derivatives.cpp  Spectral.cpp
srcs/ADM/EvolveADM/: ComputeChi.cpp  EvolveADM.cpp  GaugeADM.cpp  Mass.cpp
srcs/ADM/Fluids/: Fluid.cpp
srcs/ADM/Metrics/: Kerr.cpp  KerrBinary.cpp  Minkowski.cpp  initADM.cpp
srcs/ADM/Solver/: CFL_Condition.cpp  RungeKuttaADM.cpp  RungeKuttaEvol.cpp
srcs/ADM/Tensors/: Atilde.cpp  ConnexionADM.cpp  ExtrinsicADM.cpp  RicciTensorADM.cpp  StressEnergy.cpp
srcs/App/: CommandLine.cpp  RuntimeState.cpp
srcs/BSSN/Analysis/: Plot.cpp  export_chi.cpp
srcs/BSSN/Constraints/: ConstraintsUtils.cpp  MomentumConstraint.cpp
srcs/BSSN/Derivatives/: FiniteDifference.cpp  Metric_Derivatives.cpp  Spectral.cpp  Spectral.h
srcs/BSSN/EvolveBSSN/: ComputeChi.cpp  EvolveADM.cpp  GaugeADM.cpp  Mass.cpp  dtgamma.cpp
srcs/BSSN/Fluids/: FishboneMontcriefInit.cpp
srcs/BSSN/Metrics/: KerrBinary.cpp  Lichnerowicz.cpp  Minkowski.cpp  UtilsADM.cpp  initADM.cpp  kerr.cpp
srcs/BSSN/Solver/: CFL_Condition.cpp  RungeKuttaADM.cpp  RungeKuttaEvol.cpp
srcs/BSSN/Tensors/: Atilde.cpp  ConnexionADM.cpp  ExtrinsicADM.cpp  RicciTensorADM.cpp  StressEnergy.cpp
srcs/Connexion/: Christoffel4D.cpp
srcs/Geodesics/: Geodesics.cpp  Parser.cpp
srcs/Matrix/: matrix.cpp
srcs/Metric/: Kerr.cpp  KerrNewman.cpp  KerrdS.cpp  MetricUtils.cpp
srcs/Probs/: ADMproblems.cpp  Geodesics.cpp  LightGeodesics.cpp  MetricCompute.cpp  Riemann.cpp  Shadow.cpp
srcs/Tensor/: 3DRicciTensor.cpp  4DRicciTensor.cpp  4DRiemannTensor.cpp
srcs/Utils/: Symetries_check.cpp  Utils.cpp
tests/: RiemannRegression.cpp
